feat(cli): add crud api for source in management service
